Fix some z-index issues

--- a/mantine/src/pages/LinkViewer/LinkViewer.module.css
+++ b/mantine/src/pages/LinkViewer/LinkViewer.module.css
@@ -31,7 +31,6 @@
 
 .headerImg * {
   position: relative;
-  z-index: 1;
 }
 
 .fullWH {
